# src/router/paid.router.js
@@ -1,10 +1,19 @@
 const router = require('express').Router();
 
 const { paidController } = require('../controller');
-const { authMiddleware } = require('../middleware');
+const { authMiddleware, paidMiddleware } = require('../middleware');
 
 
 router.get('/', authMiddleware.checkAccessToken, paidController.getAll);
+
+router.get('/:id', paidMiddleware.isPaidIdValid, authMiddleware.checkAccessToken, paidController.getOneById);
+
+router.put('/:id',
+    paidMiddleware.isPaidIdValid,
+    paidMiddleware.isUpdateBodyValid,
+    authMiddleware.checkAccessToken,
+    paidController.update
+);
 
 
 module.exports = router;
